--- a/Code/gt_backend/client/src/components/classroom/css/ClassDetail.module.css
+++ b/Code/gt_backend/client/src/components/classroom/css/ClassDetail.module.css
@@ -1,20 +1,8 @@
-.classroom {
-  background-color: #162b2b;
-  color: white;
-  border-radius: 6px;
-  padding: 3rem;
-  margin: 3rem auto;
-  width: 90%;
-  max-width: 40rem;
+.app__body {
+  display: flex;
 }
 
-.classroom p {
-  font-size: 2.5rem;
-}
-
-.classroom figcaption {
-  font-style: italic;
-  font-size: 1.5rem;
-  text-align: right;
-  color: #a1e0e0;
+.app {
+  background-color: #f1f2f5;
+  height: 100vh;
 }
