classroom tab ui

--- a/Code/gt_backend/client/src/components/classroom/tabs/feed/message_sender/MessageSender.css
+++ b/Code/gt_backend/client/src/components/classroom/tabs/feed/message_sender/MessageSender.css
@@ -38,6 +38,13 @@
   cursor: pointer;
 }
 
+.messageSender__top > form > button:hover {
+  background-color: gray;
+  border-radius: 15px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
 .messgeSender__input {
   flex: 1;
 }
