--- a/Code/gt_backend/client/src/App.css
+++ b/Code/gt_backend/client/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: Arial, Helvetica, sans-serif, sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #f1f2f5;
@@ -138,6 +138,7 @@ ul {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .badge {
@@ -311,6 +312,7 @@ button {
   top: 0;
   border-bottom: solid 1px var(--primary-color);
   opacity: 0.9;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar ul {
