fine-tune post ui and layout

--- a/Code/gt_backend/client/src/components/classroom/tabs/feed/post/Post.css
+++ b/Code/gt_backend/client/src/components/classroom/tabs/feed/post/Post.css
@@ -107,13 +107,15 @@
   border-radius: 15px;
   padding: 5px 10px;
   cursor: pointer;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
 
 .post__comment__top > form > button:hover {
-  background-color: gray;
+  background-color: #707375;
   border-radius: 15px;
   padding: 5px 10px;
   cursor: pointer;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
 
 .post__comment__input {
