--- a/Code/gt_backend/client/src/components/classroom/css/ClassDetail.module.css
+++ b/Code/gt_backend/client/src/components/classroom/css/ClassDetail.module.css
@@ -10,3 +10,24 @@
   background-color: #f1f2f5;
   height: 100vh;
 }
+
+.tab__member {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tab__member .memberList {
+  flex: 1;
+  padding: 25px 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.tab__member .requestList {
+  flex: 1;
+  padding: 25px 25px;
+  display: flex;
+  flex-direction: column;
+}
