--- a/Code/gt_backend/client/src/components/classroom/sidebar/Channel/ChannelList.module.css
+++ b/Code/gt_backend/client/src/components/classroom/sidebar/Channel/ChannelList.module.css
@@ -6,3 +6,79 @@
   background-color: white;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
+
+.topicAdder {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
+  width: 100%;
+  margin-top: 15px;
+}
+
+.topicAdder__top {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #eff2f5;
+  padding: 5px;
+  align-items: center;
+}
+
+.topicAdder__top > form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.topicAdder__top > form > input {
+  outline-width: 0;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 999px;
+  background-color: #eff2f5;
+  flex: 1;
+}
+
+.topicAdder__top > form > button {
+  background-color: gray;
+  border-radius: 20px;
+  padding: 8px 15px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  margin-top: 10px;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
+  width: fit-content;
+}
+
+.topicAdder__top > form > button:hover {
+  background-color: gray;
+  border-radius: 20px;
+  padding: 8px 15px;
+  cursor: pointer;
+  margin-top: 10px;
+  box-shadow: none;
+}
+
+.topicAdder__input {
+  flex: 1;
+}
+
+.topicAdder__bottom {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.topicAdder__option {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  color: gray;
+  margin: 5px;
+}
+
+.topicAdder__option:hover {
+  background-color: #eff2f5;
+  border-radius: 20px;
+}
