--- a/Code/gt_backend/client/src/components/classroom/tabs/document/DocumentItem.module.css
+++ b/Code/gt_backend/client/src/components/classroom/tabs/document/DocumentItem.module.css
@@ -5,6 +5,7 @@
   border-radius: 15px;
   background-color: white;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
 }
 
 .documentItem__top {
