--- a/Code/gt_backend/client/src/components/classroom/tabs/feed/post/Post.css
+++ b/Code/gt_backend/client/src/components/classroom/tabs/feed/post/Post.css
@@ -104,20 +104,62 @@
 
 .post__comment__top > form > button {
   background-color: gray;
-  border-radius: 15px;
-  padding: 5px 10px;
+  border-radius: 20px;
+  padding: 8px 15px;
   cursor: pointer;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 
 .post__comment__top > form > button:hover {
   background-color: #707375;
-  border-radius: 15px;
-  padding: 5px 10px;
+  border-radius: 20px;
+  padding: 8px 15px;
   cursor: pointer;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 
 .post__comment__input {
   flex: 1;
+}
+
+.dropdown-menu {
+  width: 200px;
+  /* position: absolute; */
+  top: 10px;
+  list-style: none;
+  text-align: start;
+}
+
+.dropdown-menu li {
+  background: #1888ff;
+  cursor: pointer;
+}
+
+.dropdown-menu li:hover {
+  background: #5cabff;
+  cursor: pointer;
+}
+
+.dropdown-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #fff;
+  padding: 16px;
+}
+
+.dropdown-menu .clicked {
+  display: none;
+}
+
+.topic__select {
+  padding: '5px 10px';
+  background-color: 'gray';
+  border-radius: '5px';
+  margin-top: '10px';
 }
