--- a/Code/gt_backend/client/src/components/schedule/NotificationPanel.module.css
+++ b/Code/gt_backend/client/src/components/schedule/NotificationPanel.module.css
@@ -1,8 +1,9 @@
 .notificationList {
-  width: 25%;
-  margin-top: 15px;
+  width: 100%;
+  height: 100%;
+  margin-top: 30px;
   border-radius: 15px;
-  padding: 20px;
+  padding: 10px;
   background-color: white;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
@@ -55,10 +56,9 @@
 
 .notificationSender__top > form > button:hover {
   background-color: gray;
-  border-radius: 20px;
-  padding: 8px 15px;
+  border-radius: 15px;
+  padding: 5px 10px;
   cursor: pointer;
-  margin-top: 10px;
   box-shadow: none;
 }
 
